<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smallheart"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context="diec.applications.asistenciarcp.EmergenciaPrimeraParte">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/PreguntaInconcientTEXTO"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/SeparacionBOTONES"
        android:textAlignment="center"

        android:background="@drawable/forma_boton3"
        android:textColor="@drawable/text_boton2"

        android:onClick="EstaInConciente"
        android:text="@string/InconscienteBOTON"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/SeparacionBOTONES"

        android:background="@drawable/forma_boton2"
        android:textColor="@drawable/text_boton2"
        android:onClick="EstaConciente"
        android:text="@string/ConcienteBOTON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AclaracionRespiracion"
        android:layout_marginTop="20dp"/>


</LinearLayout>