<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smallheart"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context="diec.applications.asistenciarcp.EmergenciaTercerParte">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/EstaSoloPreguntaTEXTO"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/SeparacionBOTONES"
        android:background="@drawable/forma_boton3"
        android:textColor="@drawable/text_boton2"
        android:onClick="Solo"
        android:text="@string/EstaSOLOBOTON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/SeparacionBOTONES"
        android:background="@drawable/forma_boton2"
        android:textColor="@drawable/text_boton2"
        android:onClick="Acompañado"
        android:text="@string/EstaAcompañadoBOTON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />


</LinearLayout>