<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smallheart"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"


    tools:context=".EmergenciaSegundaParte">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="120dp"

        android:text="@string/PreguntaRespiraTEXTO"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_boton3"
        android:textColor="@drawable/text_boton2"
        android:layout_marginTop="@dimen/SeparacionBOTONES"
        android:onClick="NoRESPIRA"
        android:text="@string/NoRespiraBOTON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_boton2"
        android:textColor="@drawable/text_boton2"
        android:layout_marginTop="@dimen/SeparacionBOTONES"
        android:drawableBottom="@color/colorPrimary"
        android:onClick="RESPIRA"
        android:text="@string/RespiraNormalBOTON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/Longitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/Latitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>


</LinearLayout>