<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"


    android:background="@drawable/smallheart"
    tools:context="diec.applications.asistenciarcp.LlamarAEmergencias">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/LugarEmergenciaTEXTO"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_boton"
        android:textColor="@drawable/text_button1"
        android:layout_marginTop="@dimen/SeparacionBOTONES"
        android:text="@string/InUNsBOTON"
        android:onClick="NumeroLocal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NumeroLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_boton"
        android:textColor="@drawable/text_button1"
        android:onClick="NumeroAlternativo"
        android:layout_marginTop="@dimen/SeparacionBOTONES"
        android:text="@string/outUNsBOTON"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <TextView
        android:id="@+id/NumeroAlternativo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>